--- a/views/playerList.jade
+++ b/views/playerList.jade
@@ -18,6 +18,8 @@ block inlineScripts
 
 block content
 
+	include partials/playerList
+
 	section(id="top")
 		span#pageTitle Players
 	section(id="left")
@@ -27,4 +29,5 @@ block content
 				p (Hint: If the search looks wrong, hit enter)
 				input(id="filterBox" type="text" style="width:75%" onkeyup="doWork(this)")
 				div#playerList
-					include partials/playerList
+					mixin playerList(true)
+					
