--- a/views/layout.jade
+++ b/views/layout.jade
@@ -13,6 +13,7 @@ html
 			script(type='text/javascript', src="/public/jquery.tablesorter.js")
 			script(type='text/javascript', src="/public/moment.min.js")
 			script(type='text/javascript', src="/socket.io/socket.io.js")
+			script(type='text/javascript', src="/public/numeral.min.js")
 
 	body
 		block inlineScripts
