--- a/views/vulture.jade
+++ b/views/vulture.jade
@@ -35,6 +35,34 @@ block content
 	=	"user.user='" + user.team + "';"
 	| </script>
 
+	mixin vulturePlayerTable(players, isUsersPlayer, defaultMessage)
+		-if(players.length == 0)
+			p= defaultMessage
+		-else
+			table.hoverable
+				thead
+					th Name
+					th Team
+					th.small ML Status
+					th.small Fantasy Status
+				tbody
+					-each player in players
+						tr
+							td
+								a.hiddenLink(href="/player/" + player._id)= player.name_display_first_last
+							td
+								mixin teamLink(teamHash[player.history[0].fantasy_team], false)
+							td.status= player.status_code
+							td.status= player.fantasy_status_code
+							-if(isUsersPlayer)
+								td
+									input(type="button" value="Click to Fix" 
+										onclick="fix('" + player._id + "','" + player.name_display_first_last +"')")
+							-else
+								td
+									form(method="GET" action="/gm/vulture/" + player._id)
+										input(type="submit" value="Vulture")
+
 	span#pageTitle Vultures
 
 	-if(!isVultureOn)
@@ -45,7 +73,6 @@ block content
 	-else
 		section(id="top")
 			div.widget
-				p= vulture_message
 				h2 Open Vultures
 				-if(openVultures.length == 0)
 					p You have no open vultures
@@ -83,50 +110,12 @@ block content
 				-if(user)
 					div(style="display:inline-block;vertical-align:top")
 						h2 Your Vulturable Players
-						table
-							thead
-								th Name
-								th Team
-								th.small ML Status
-								th.small Fantasy Status
-							tbody
-								-each player in vulturablePlayers
-									-if(player.history[0].fantasy_team == user.team)
-										tr
-											td
-												a.hiddenLink(href="/player/" + player._id)= player.name_display_first_last
-											td
-												mixin teamLink(teamHash[player.history[0].fantasy_team], false)
-											td.status= player.status_code
-											td.status= player.fantasy_status_code
-											td
-												input(type="button" value="Click to Fix" 
-													onclick="fix('" + player._id + "','" + player.name_display_first_last +"')")
-										tr(id="player_" + player._id + "_message")
+						mixin vulturePlayerTable(userVulturablePlayers, true, "You have no vulturable players")
+											
 					div(style="display:inline-block;vertical-align:top")
 						table#fixMessages
 
 		section(id="right" style="width:40%")
 			div.widget
 				h2 Leaguewide Vulturable Players
-				table
-					thead
-						th Name
-						th Team
-						th.small ML Status
-						th.small Fantasy Status
-					tbody
-						-each player in vulturablePlayers
-							-if(!user || player.history[0].fantasy_team != user.team)
-								tr
-									td
-										a.hiddenLink(href="/player/" + player._id)= player.name_display_first_last
-									td
-										mixin teamLink(teamHash[player.history[0].fantasy_team], false)
-									td.status
-										= player.status_code
-									td.status
-										= player.fantasy_status_code
-									td
-										form(method="GET" action="/gm/vulture/" + player._id)
-											input(type="submit" value="Vulture")
+				mixin vulturePlayerTable(leagueVulturablePlayers, false, "There are no vulturable players")
