--- a/views/playerList.jade
+++ b/views/playerList.jade
@@ -47,5 +47,6 @@ block content
 							tr
 								td
 									a.name(href="/player/"+player._id)= player.name_display_first_last
+								td= player.espn_player_name
 								td
 									a.name(href="/admin/player/" + player._id)= "Admin"
