--- a/views/profile.jade
+++ b/views/profile.jade
@@ -8,7 +8,7 @@ block content
 		div.widget
 			h2= user.firstName + " " + user.lastName
 
-	section(id="left" style="width:100%")
+	section(id="left" style="width:50%")
 		
 		div.widget
 			p(style="margin-right:40px")= "Team: "
@@ -16,7 +16,7 @@ block content
 			p(style="padding-right:20px")= "E-mail: " + user.email
 
 		div.widget
-			p Change Password:
+			h2 Change Password
 			form(id="changePassword", method="POST", action="/user/changePassword")
 				div
 					p(style="width:180px;display:inline-block") Old Password:
@@ -29,4 +29,11 @@ block content
 					input#new_confirm(type='password', name='new_confirm')
 				input(type="submit", value="Change Password")
 
-
+	section(id="right" style="width:50%")
+		div.widget
+			h2 Change Team Name
+			form(id="changeTeamName" method="POST" action="/user/changeTeamName")
+				div
+					p(style="width:90px;display:inline-block") New Name:
+					input(type="text" style="width:200px" name="newName")
+				input(type="submit" value="Change Name")
