--- a/views/profile.jade
+++ b/views/profile.jade
@@ -13,6 +13,8 @@ block content
 		div.widget
 			p(style="margin-right:40px")= "Team: "
 				a(href="/team/"+team.teamId style="display:inline-block")= team.fullName
+			p(style="margin-right:40px")= "Abbreviation: "
+				span= team.team
 			p(style="padding-right:20px")= "E-mail: " + user.email
 
 		div.widget
