adding trading; mlb properties

--- a/views/home.jade
+++ b/views/home.jade
@@ -74,7 +74,12 @@ block content
 			h2 Important Dates
 			ul
 				li
-					h3 Saturday, March 22: Major League Draft, 12 pm EST
+					h3 Monday, March 24th 9 pm EST: Free Agency Opens
+						ul
+							li
+								p You are free to make moves on ESPN.com after this point
+				li
+					h3 Sunday, March 30th / Monday March 31st: MLB Opening Night / Day
 
 	section(id="right" style="width:30%")
 		div.widget(style="display:block")
